2023-4-20 _config.yml 변경

--- a/_layouts/home_hero.html
+++ b/_layouts/home_hero.html
@@ -65,3 +65,9 @@ layout: archive
 {% endfor %}
 
 {% include paginator.html %}
+
+<!--{% if page.theme_mode == "dark" %}-->
+<!--<link rel="stylesheet" type="text/css" href="/assets/css/dark.css">-->
+<!--{% else %}-->
+<!--<link rel="stylesheet" type="text/css" href="/assets/css/light.css">-->
+<!--{% endif %}-->
